--- a/blog/C0.2_EduardoCollazo_Supreme_Coders_.md
+++ b/blog/C0.2_EduardoCollazo_Supreme_Coders_.md
@@ -39,3 +39,7 @@ ___
   
 2. Coloque el diagrama elaborado dentro de este apartado.
   ![imagen](../img/MapaMental.drawio.png)
+___
+
+
+:page_facing_up: [Regresar al Repositorio Principal](https://github.com/EduardoCollazoR/AnalisisAvanzDeSoft.git) 
