--- a/blog/C0.2_EduardoCollazo_Supreme_Coders_.md
+++ b/blog/C0.2_EduardoCollazo_Supreme_Coders_.md
@@ -42,4 +42,4 @@ ___
 ___
 
 
-:page_facing_up: [Regresar al Repositorio Principal](https://github.com/EduardoCollazoR/AnalisisAvanzDeSoft.git) 
+:page_facing_up: [Regresar al Repositorio Principal](/readme.md) 
