--- a/blog/C01.EduardoCollazo_Supreme_Coders.md
+++ b/blog/C01.EduardoCollazo_Supreme_Coders.md
@@ -25,4 +25,4 @@ Numero de control | Nombre del integrante | 3 fortalezas tecnológicas | 3 debil
 16211969|Bamaca Trujillo Manuel Alejandro|C#, HTML, Php|Java, SQL, C|
 17211670|Frias Aviña Emmanuel|.Net, SQLite, Phyton|Java, C++, JS|
 ___
-:page_facing_up: [Regresar al Repositorio Principal](https://github.com/EduardoCollazoR/AnalisisAvanzDeSoft.git) 
+:page_facing_up: [Regresar al Repositorio Principal](/readme.md) 
