--- a/blog/C0.3_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C0.3_EduardoCollazo_Supreme_Coders.md
@@ -1,4 +1,4 @@
-# Mapa mental sobre el proceso de desarrollo RUP
+# Diagrama de flujo sobre el proceso de desarrollo RUP
 
 ## :trophy: C0.3 Reto en clase
 
@@ -34,6 +34,7 @@ ___
 ![DiagramadeFlujo](/img/DiagramaFlujo.drawio.svg)
 
 1. Coloque dentro de este apartado, el diagrama elaborado bajo las instrucciones anteriormente indicadas.
+![DiagramadeFlujo](/img/DiagramaDeFlujoRUP.drawio.png)
 ___
 
 :page_facing_up: [Regresar al Repositorio Principal](/readme.md) 
