--- a/blog/C0.3_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C0.3_EduardoCollazo_Supreme_Coders.md
@@ -49,5 +49,6 @@ ___
 | Instrucciones | Se cumple con cada uno de los puntos indicados dentro del apartado Instrucciones?            | 20 |
 | Desarrollo    | Se respondió a cada uno de los puntos solicitados dentro del desarrollo de la actividad?     | 80      |
 
-
+___
+ :round_pushpin: [Enlace al Github](https://github.com/EduardoCollazoR/AnalisisAvanzDeSoft.git)
 :page_facing_up: [Regresar al Repositorio Principal](/readme.md) 
