--- a/blog/C0.4_EduardoCollazo_SupremeCoders.md
+++ b/blog/C0.4_EduardoCollazo_SupremeCoders.md
@@ -63,17 +63,17 @@ ___
 *Son sistemas que desde su entorno recopilan datos usando un conjunto de sensores, y envían dichos datos para su procesamiento a otros sistemas. El software tiene que interactuar con los sensores y se instala regularmente en un ambiente hostil, como en el interior de un motor o en una ubicación remota.*
   - Tipo de tecnologías que se pueden involucrar para desarrollar un sistema de adquisición de datos
   **Hardware**
-  *Sensores
-  Actuadores
-  Dispositivos digitales (Celulares, computadoras)
-  Bus de Comunicación Poderoso
-  Convertidor de señal (A/D y D/A) 
-  Componentes Electrónicos Avanzados
-  Tarjeta de Wifi, Ethernet, bluetooth y USB*
+  * Sensores
+  * Actuadores
+  * Dispositivos digitales (Celulares, computadoras)
+  * Bus de Comunicación Poderoso
+  * Convertidor de señal (A/D y D/A) 
+  * Componentes Electrónicos Avanzados
+  * Tarjeta de Wifi, Ethernet, bluetooth y USB
   **Software**
-  *Programas para visualizar los datos 
-  Tecnología Cloud-IoT
-  Base de datos*
+  * Programas para visualizar los datos 
+  * Tecnología Cloud-IoT
+  * Base de datos
   - Elabore un ilustración que apoye a explicar un mapa de ruta a seguir para crear una arquitectura para un sistema de adquisición de datos.
 
 - **Caso de éxito**
@@ -83,11 +83,11 @@ ___
   - Que tipos de sistemas ha implantado Vodafone al caso de estudio indicado en el video?
   *NB-IoT, Narrowband-IoT es la primera tecnología centrada en conectar a Internet objetos cotidianos que requieren pequeñas cantidades de datos en períodos de tiempo largos.*
   - Que tecnologías se observan en este caso de éxito?
-*Foto satelites
-Sensores con estaciones climaticas
-Big data
-IoT
-Almacenamiento en la nube*
+* Foto satélites
+* Sensores con estaciones climaticas
+* Big data
+* IoT
+* Almacenamiento en la nube
 
 1. Coloque aquí la ilustración elaborada para el **sistema embebido**
 ![Sistema Adquision de Datos](/img/IlustracionSisteEmbebido.drawio.png)
