--- a/blog/C0.4_EduardoCollazo_SupremeCoders.md
+++ b/blog/C0.4_EduardoCollazo_SupremeCoders.md
@@ -63,14 +63,14 @@ ___
 >*Son sistemas que desde su entorno recopilan datos usando un conjunto de sensores, y envían dichos datos para su procesamiento a otros sistemas. El software tiene que interactuar con los sensores y se instala regularmente en un ambiente hostil, como en el interior de un motor o en una ubicación remota.*
   - Tipo de tecnologías que se pueden involucrar para desarrollar un sistema de adquisición de datos
  > **Hardware**
-  Sensores
-  Actuadores
-  Dispositivos digitales (Celulares, computadoras)
-  Bus de Comunicación Poderoso
-  Convertidor de señal (A/D y D/A) 
-  Componentes Electrónicos Avanzados
-  Tarjeta de Wifi, Ethernet, bluetooth y USB
-  **Software**
+  1. Sensores
+  2. Actuadores
+  3. Dispositivos digitales (Celulares, computadoras)
+  4. Bus de Comunicación Poderoso
+  5. Convertidor de señal (A/D y D/A) 
+  6. Componentes Electrónicos Avanzados
+  7. Tarjeta de Wifi, Ethernet, bluetooth y USB
+ > **Software**
   Programas para visualizar los datos 
   Tecnología Cloud-IoT
   Base de datos
