--- a/blog/C0.4_EduardoCollazo_SupremeCoders.md
+++ b/blog/C0.4_EduardoCollazo_SupremeCoders.md
@@ -43,17 +43,17 @@ ___
 - **Sistema embebido**:
 
   - Definición de un sistema embebido
-  *Se trata de sistemas de control de software que regulan y gestionan dispositivos de hardware. Numéricamente, quizás existen más sistemas embebidos que cualquier otro tipo de sistema. Algunos ejemplos de sistemas embebidos incluyen el software en un teléfono móvil (celular), el software que controla los frenos antibloqueo de un automóvil y el software en un horno de microondas para controlar el proceso de cocinado.*
+  >*Se trata de sistemas de control de software que regulan y gestionan dispositivos de hardware. Numéricamente, quizás existen más sistemas embebidos que cualquier otro tipo de sistema. Algunos ejemplos de sistemas embebidos incluyen el software en un teléfono móvil (celular), el software que controla los frenos antibloqueo de un automóvil y el software en un horno de microondas para controlar el proceso de cocinado.*
   - Tipo de tecnologías que se pueden involucrar para desarrollar un sistema embebido.
-  **Hardware**
-  *Placas arduino(cualquier modelo)
-  Placas nodemcu(Cualquier modelo)
-  Componentes Electrónicos Avanzados*
-  **Lenguajes de programación**
-  *Ensamblador 
-  C
-  C++
-  Java (se esta usando actualmente)*
+  >**Hardware**
+  1. Placas arduino(cualquier modelo)
+  2. Placas nodemcu(Cualquier modelo)
+  3. Componentes Electrónicos Avanzados
+  >**Lenguajes de programación**
+  1. Ensamblador 
+  2. C
+  3. C++
+  4. Java (se esta usando actualmente)
   
   - Elabore un ilustración que apoye a explicar un mapa de ruta a seguir para crear una arquitectura para un sistema embebido
 
@@ -71,17 +71,17 @@ ___
   6. Componentes Electrónicos Avanzados
   7. Tarjeta de Wifi, Ethernet, bluetooth y USB
  > **Software**
-  Programas para visualizar los datos 
-  Tecnología Cloud-IoT
-  Base de datos
+  1. Programas para visualizar los datos 
+  2. Tecnología Cloud-IoT
+  3. Base de datos
   - Elabore un ilustración que apoye a explicar un mapa de ruta a seguir para crear una arquitectura para un sistema de adquisición de datos.
 
 - **Caso de éxito**
 
   - De acuerdo con el video mostrado, explique que ha permitido la innovación tecnológica a la empresa lograr?
-  *Gracias a las fotos satélite y sensores con estaciones climáticas, pueden conocer el viñedo de manera rápida y precisa, controlando factores como el comportamiento de la planta o los datos climáticos que se trasladan directamente a la nube para maximizar la producción.*
+  >*Gracias a las fotos satélite y sensores con estaciones climáticas, pueden conocer el viñedo de manera rápida y precisa, controlando factores como el comportamiento de la planta o los datos climáticos que se trasladan directamente a la nube para maximizar la producción.*
   - Que tipos de sistemas ha implantado Vodafone al caso de estudio indicado en el video?
-  *NB-IoT, Narrowband-IoT es la primera tecnología centrada en conectar a Internet objetos cotidianos que requieren pequeñas cantidades de datos en períodos de tiempo largos.*
+  >*NB-IoT, Narrowband-IoT es la primera tecnología centrada en conectar a Internet objetos cotidianos que requieren pequeñas cantidades de datos en períodos de tiempo largos.*
   - Que tecnologías se observan en este caso de éxito?
 * Foto satélites
 * Sensores con estaciones climaticas
