--- a/blog/C0.4_EduardoCollazo_SupremeCoders.md
+++ b/blog/C0.4_EduardoCollazo_SupremeCoders.md
@@ -46,15 +46,15 @@ ___
   >*Se trata de sistemas de control de software que regulan y gestionan dispositivos de hardware. Numéricamente, quizás existen más sistemas embebidos que cualquier otro tipo de sistema. Algunos ejemplos de sistemas embebidos incluyen el software en un teléfono móvil (celular), el software que controla los frenos antibloqueo de un automóvil y el software en un horno de microondas para controlar el proceso de cocinado.*
   - Tipo de tecnologías que se pueden involucrar para desarrollar un sistema embebido.
   >**Hardware**
-  1. Placas arduino(cualquier modelo)
-  2. Placas nodemcu(Cualquier modelo)
-  3. Componentes Electrónicos Avanzados
+  - Placas arduino(cualquier modelo)
+  - Placas nodemcu(Cualquier modelo)
+  - Componentes Electrónicos Avanzados
    
   >**Lenguajes de programación**
-  1. Ensamblador 
-  2. C
-  3. C++
-  4. Java (se esta usando actualmente)
+  - Ensamblador 
+  - C
+  - C++
+  - Java (se esta usando actualmente)
   
   - Elabore un ilustración que apoye a explicar un mapa de ruta a seguir para crear una arquitectura para un sistema embebido
 
@@ -62,7 +62,7 @@ ___
 
   - Definición de un sistema de adquisición de datos
 >*Son sistemas que desde su entorno recopilan datos usando un conjunto de sensores, y envían dichos datos para su procesamiento a otros sistemas. El software tiene que interactuar con los sensores y se instala regularmente en un ambiente hostil, como en el interior de un motor o en una ubicación remota.*
-  - Tipo de tecnologías que se pueden involucrar para desarrollar un sistema de adquisición de datos
+   - Tipo de tecnologías que se pueden involucrar para desarrollar un sistema de adquisición de datos
  > **Hardware**
   1. Sensores
   2. Actuadores
@@ -84,11 +84,11 @@ ___
   - Que tipos de sistemas ha implantado Vodafone al caso de estudio indicado en el video?
   >*NB-IoT, Narrowband-IoT es la primera tecnología centrada en conectar a Internet objetos cotidianos que requieren pequeñas cantidades de datos en períodos de tiempo largos.*
   - Que tecnologías se observan en este caso de éxito?
-* Foto satélites
-* Sensores con estaciones climaticas
-* Big data
-* IoT
-* Almacenamiento en la nube
+  1. Foto satélites
+   2. Sensores con estaciones climaticas
+  3. Big data
+   4. IoT
+   5. Almacenamiento en la nube
 
 1. Coloque aquí la ilustración elaborada para el **sistema embebido**
 ![Sistema Adquision de Datos](/img/IlustracionSisteEmbebido.drawio.png)
