--- a/blog/C0.4_EduardoCollazo_SupremeCoders.md
+++ b/blog/C0.4_EduardoCollazo_SupremeCoders.md
@@ -84,11 +84,11 @@ ___
   - Que tipos de sistemas ha implantado Vodafone al caso de estudio indicado en el video?
   >*NB-IoT, Narrowband-IoT es la primera tecnología centrada en conectar a Internet objetos cotidianos que requieren pequeñas cantidades de datos en períodos de tiempo largos.*
   - Que tecnologías se observan en este caso de éxito?
-  1. Foto satélites
-  2. Sensores con estaciones climaticas
-  3. Big data
-  4. IoT
-  5. Almacenamiento en la nube
+  >1. Foto satélites
+  >2. Sensores con estaciones climaticas
+  >3. Big data
+  >4. IoT
+  >5. Almacenamiento en la nube
 
 1. Coloque aquí la ilustración elaborada para el **sistema embebido**
 ![Sistema Adquision de Datos](/img/IlustracionSisteEmbebido.drawio.png)
