--- a/blog/C0.4_EduardoCollazo_SupremeCoders.md
+++ b/blog/C0.4_EduardoCollazo_SupremeCoders.md
@@ -108,4 +108,4 @@ ___
 
 ___   
  :round_pushpin: [Enlace al Github](https://github.com/EduardoCollazoR/AnalisisAvanzDeSoft.git)
-:page_facing_up: [Regresar al Repositorio Principal](/blog/C0.4_EduardoCollazo_SupremeCoders.md)
+:page_facing_up: [Regresar al Repositorio Principal](/readme.md)
