--- a/blog/C1.1_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C1.1_EduardoCollazo_Supreme_Coders.md
@@ -36,9 +36,9 @@ ___
 1. Especifique el  **Objetivo general** del caso de estudio, recordándose que se debe indicar lo que se busca con el proyecto.
    > Desarrollar un sistema automata con tecnologia IoT, para el monitoreo y control en tiempo real de condiciones ambientales dentro de los almacenajes.
 1. Especifique tres **objetivos específicos**, recordándose que deben ser medibles, cuantificables y logrables.
-   > 1. Eliminar por completo el uso de papel y que sea todo digital.
-   > 2. Debe ser compatible con cualquier dispositivo.
-   > 3. Mandar alertas en todo momento cuando ocurra algo fuera de lo normal dentro de los almacenenajes.
+   > - Eliminar por completo el uso de papel y que sea todo digital.
+   > - Debe ser compatible con cualquier dispositivo.
+   > - Mandar alertas en todo momento cuando ocurra algo fuera de lo normal dentro de los almacenenajes.
 2. Coloque aqui el diagrama del **modelo del negocio** que se visualiza para el caso de estudio, utilizando BPMN y la herramienta case Bizagi.
 ![BPMN](/img/ModeloBPMN.png)
 
