--- a/blog/C1.2_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C1.2_EduardoCollazo_Supreme_Coders.md
@@ -33,7 +33,7 @@ ___
 1. Elabore el documento que se anexa en las instrucciones referente al acta constitutiva al estilo markdown, dentro del entorno de visual studio code.
 2. Coloque aquí el documento acta constitutiva elaborada y registrada con los datos solicitados.
 ___
-##<center> Acta Constitutiva del Proyecto</center>
+## Acta Constitutiva del Proyecto
 ___
 **Empresa:** Supreme Coders
 **Nombre del proyecto:** Intelli-Weather
