--- a/blog/C1.2_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C1.2_EduardoCollazo_Supreme_Coders.md
@@ -35,13 +35,13 @@ ___
 ___
 ## Acta Constitutiva del Proyecto
 ___
-**Empresa:** Supreme Coders
-**Nombre del proyecto:** Intelli-Weather
-**Tipo de proyecto:** Prototipo
-**Patrocinador:** Ing. Luisa Martinez Segovia
-**Dueño del producto:** Frias Aviña Emmanuel
-**Gerente del Proyecto:**  Manuel Alejandro Bamaca Trujillo
-**Scrum Master:** Eduardo Collazo Rivera
+- **Empresa:** Supreme Coders
+- **Nombre del proyecto:** Intelli-Weather
+- **Tipo de proyecto:** Prototipo
+- **Patrocinador:** Ing. Luisa Martinez Segovia
+- **Dueño del producto:** Frias Aviña Emmanuel
+- **Gerente del Proyecto:**  Manuel Alejandro Bamaca Trujillo
+- **Scrum Master:** Eduardo Collazo Rivera
 
  ###  :dart: Propósito del documento
  *De acuerdo a lo solicitado por parte de la empresa, en este documento se le presentan los objetivos que se atacaran y lo que se alcanzara a lograr mediante el desarrollo del prototipo asi mismo hacer mencion de los participantes involucrados en el desarrollo. 
@@ -65,7 +65,7 @@ Mandar alertas en caso de que una condición de ambientación se salga de contro
 - *Clientes: Estaran al pendiente de las condiciones ambientales de su mercancia.*
  ### :ballot_box_with_check: Requisitos de alto nivel:
 Requisito | Criterio de exito |   
----------|----------|---------|---------|
+---------|----------|
 Reducir los costos relativos al personal operativo, así como eliminación documentos en papel.|Automatizacion del sistema y procesos para creacion de documentos digitalizados.|
 Ofrecer la seguridad mediante el acceso de tipos de usuarios.|Acceso para distintos usuarios. |
 Almacenar el historial de todos los eventos ocurridos tomando en cuenta los que indiquen algun problema.|Base datos para almacenamiento de los datos.|
