--- a/blog/C1.3_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C1.3_EduardoCollazo_Supreme_Coders.md
@@ -53,7 +53,7 @@ ___
     RSI-01|Registros en base de datos|Los registros del sistema se deben almacenar en una base de datos para posteriores consultas.
     RSI-02|Respaldo de registros|Tener un respaldo de la base de datos para en el caso de que los registros se dañen poder tener acceso a los ultimos registros realizados.
     RSI-03|Soportar sensores|Debe ser capaz de poder soportar y adquirir datos de multiples sensores.
-    RSI-04|Registro de usuarios|Permitir el registro de usuarios otorgando permisos de autorizacion para poder ingresar al sistema.
+    RSI-04|Registro de usuarios|Permitir el registro de usuarios otorgando permisos de autorización para poder ingresar al sistema.
     RSI-05|Digitalización|Digitalización de todos los datos recibidos por los sensores.
 
 ___
