--- a/blog/C1.3_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C1.3_EduardoCollazo_Supreme_Coders.md
@@ -34,27 +34,27 @@ ___
 
 ## :pencil2: Desarrollo
 
-1. Listado de requisitos de usuario
+1. Listado de requisitos funcionales del sistema
    
     Identificador | Nombre | Descripción
     :--|:--|:--
-    RUS-01|Costos|El sistema debe ser automatico para el monitorio y control ofreciendo reducción de la mano de obra por parte del personal.
-    RUS-02|Digitalización de datos|El sistema debe visualizar en paneles de información los datos adquiridos de los sensores en tiempo real.
-    RUS-03|Historial de eventos|El sistema debe registrar un historial de todos los eventos ocurridos.
-    RUS-04|Reportes de indicadores|El sistema debe mostrar reportes visualizando todos los eventos de forma historicos, alertas y graficos.
-    RUS-05|Disponibilidad del sistema|El sistema siempre debe estar disponible para cuando el usuario necesite ingresar.
-    RUS-06|Acceso del sistema|El sistema  debe poder ser accedido desde cualquier lugar donde el usuario se encuentre.
-    RUS-07|Compatibilidad del sistema|El sistema debe ser compatible con cualquier dispositivo digital para su uso.
-    RUS-08|Alertas de eventos|El sistema debe notificar una alerta al personal y al cliente cuando ocurra un fallo o error en las condiciones ambientales. 
+    RFN-01|Digitalización de datos|El sistema debe mostrar paneles de información de los datos adquiridos de los sensores en tiempo real, una vez que el usuario acceda con su nombre de usuario y contraseña.
+    RFN-02|Historial general|El sistema debe crear y almacenar un archivo para los registros de eventos generados en el sistema como actualizaciones, entradas y salidas al sistema por parte del usuario en especial las alertas que marcaron anormalidades dentro del sistema.
+    RFN-03|Reportes|El sistema debe generar reportes semanales, por mes y año realizando consultas ala base datos de la información adquiridos por los sensores y alertas registradas, de manera que se muestren los reportes históricos, gráficos y reportes de alertas.
+    RFN-04|Notificación de alerta|El sistema debe notificar una alerta con la fecha, hora y numero de almacén al personal y al cliente cuando ocurra un fallo o error en las condiciones ambientales dentro del almacén. 
+    RFN-05|Registro de usuarios|El sistema debe dejar hacer registros de usuarios mediante su nombre, usuario y contraseña para otorgarle permisos de autorización de acceso a distintas partes del sistema.
+    RFN-06|Control de accesos|El sistema debe dejar accesar a un usuario mediante su nombre  de usuario y contraseña a la plataforma registrando su hora de entrada y salida de la plataforma.
+    RFN-07|Base de datos|El sistema debe almacenar todos los datos adquiridos de los sensores, registros de alertas, registros de usuarios, entradas y salidas del sistema por parte del usuario, para consultas posteriores.
+    RFN-08|Control de sensores|El sistema debe permitir al personal monitorear y controlar las condiciones de los sensores desde la plataforma siempre y cuando alla ingresado al sistema con su nombre se usuario y contraseña.
  
-2. Lista de requisitos del sistema
+2. Lista de requisitos no funcionales del sistema
     Identificador | Nombre | Descripción
     :--|:--|:--
-    RSI-01|Registros en base de datos|Los registros del sistema se deben almacenar en una base de datos para posteriores consultas.
-    RSI-02|Respaldo de registros|Tener un respaldo de la base de datos para en el caso de que los registros se dañen poder tener acceso a los ultimos registros realizados.
-    RSI-03|Soportar sensores|Debe ser capaz de poder soportar y adquirir datos de multiples sensores.
-    RSI-04|Registro de usuarios|Permitir el registro de usuarios otorgando permisos de autorización para poder ingresar al sistema.
-    RSI-05|Digitalización|Digitalización de todos los datos recibidos por los sensores.
+    RNFN-01|Disponibilidad del sistema|Siempre debe estar disponible para cuando el usuario necesite ingresar.
+    RNFN-02|Acceso del sistema|Debe poder ser accedido desde cualquier lugar donde el usuario se encuentre.
+    RNFN-03|Compatibilidad del sistema|Se debe poder acceder al sistema desde cualquier sistema operativo y/o dispositivo digital.
+    RNFN-04|Soportar sensores|Debe ser capaz de poder soportar y adquirir datos de multiples sensores.
+    RNFN-05|Costos|El sistema debe ser automatico para el monitorio y control ofreciendo reducción de la mano de obra por parte del personal.
 
 ___
 
