--- a/blog/C1.4_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C1.4_EduardoCollazo_Supreme_Coders.md
@@ -10,7 +10,7 @@ ___
 
 - Basado en una investigación y en el documento proporcionado por el asesor, realizar para el caso de estudio, un ejemplo de los siguientes diagramas:
    + Diagrama de **casos de uso**
-   + Diagrama de **de secuencia**
+   + Diagrama  **de secuencia**
    + Diagrama de **clases**
 - El diagrama a ilustrar podrá ser realizado con la herramienta UML llamada draw.io, la cual deberán estar integradas a visual studio code. 
 - Toda actividad o reto se deberá realizar utilizando el estilo **MarkDown con extension .md** y el entorno de desarrollo VSCode, debiendo ser elaborado como un documento **single page**, es decir si el documento cuanta con imágenes, enlaces o cualquier documento externo debe ser accedido desde etiquetas y enlaces, y debe ser nombrado con la nomenclatura **C1.4_NombreApellido_Equipo.pdf.**
