--- a/blog/C1.4_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C1.4_EduardoCollazo_Supreme_Coders.md
@@ -56,7 +56,7 @@ ___
 
 ___
 ### Diagrama de casos de usos
-![CasosDeUsos](/img/DiagramaCasosDeUsos.png)
+![CasosDeUsos](/img/DiagramaCasosDeUsos.drawio.svg)
 ___
 
 ### :bomb: Rubrica
