--- a/blog/C1.4_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C1.4_EduardoCollazo_Supreme_Coders.md
@@ -58,7 +58,9 @@ ___
 ### Diagrama de casos de usos
 ![CasosDeUsos](/img/DiagramaCasosDeUsos.drawio.svg)
 ___
-
+### Diagrama de secuencia
+![Secuencia]()
+___
 ### :bomb: Rubrica
 
 | Criterios     | Descripción                                                                                  | Puntaje |
