--- a/blog/C1.4_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C1.4_EduardoCollazo_Supreme_Coders.md
@@ -59,7 +59,7 @@ ___
 ![CasosDeUsos](/img/DiagramaCasosDeUsos.drawio.svg)
 ___
 ### Diagrama de secuencia
-![Secuencia]()
+![Secuencia](/img/DiagramaDeSecuencia/IniciarSesion.drawio.png)
 ___
 ### :bomb: Rubrica
 
