--- a/blog/C1.4_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C1.4_EduardoCollazo_Supreme_Coders.md
@@ -61,6 +61,9 @@ ___
 ### Diagrama de secuencia
 ![Secuencia](/img/DiagramaDeSecuencia/IniciarSesion.drawio.png)
 ___
+### Diagrama de clases
+![Clases]()
+___
 ### :bomb: Rubrica
 
 | Criterios     | Descripción                                                                                  | Puntaje |
