--- a/blog/C1.4_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C1.4_EduardoCollazo_Supreme_Coders.md
@@ -62,7 +62,7 @@ ___
 ![Secuencia](/img/DiagramaDeSecuencia/IniciarSesion.drawio.png)
 ___
 ### Diagrama de clases
-![Clases]()
+![Clases](/img/diagrama_clases.drawio.png)
 ___
 ### :bomb: Rubrica
 
