--- a/blog/C1.5_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C1.5_EduardoCollazo_Supreme_Coders.md
@@ -10,8 +10,8 @@ ___
 
 - Basado en una investigación y en el documento proporcionado por el asesor, realizar para el caso de estudio, un ejemplo de los siguientes diagramas estructurados:
    + Diagrama  **de estados**
+   + Diagrama  **de actividades**
    + Diagrama  **de componentes**
-   + Diagrama  **de distribución**
 - El diagrama a ilustrar podrá ser realizado con la herramienta UML llamada draw.io, la cual deberán estar integradas a visual studio code. 
 - Toda actividad o reto se deberá realizar utilizando el estilo **MarkDown con extension .md** y el entorno de desarrollo VSCode, debiendo ser elaborado como un documento **single page**, es decir si el documento cuanta con imágenes, enlaces o cualquier documento externo debe ser accedido desde etiquetas y enlaces, y debe ser nombrado con la nomenclatura **C1.5_NombreApellido_Equipo.pdf.**
 - Es requisito que el .MD contenga una etiqueta del enlace al repositorio de su documento en GITHUB, por ejemplo **Enlace a mi GitHub** y al concluir el reto se deberá subir a github.
@@ -54,11 +54,11 @@ ___
 ### Diagrama de Estados
 ![Estados](/img/DiagramaDeEstado.drawio.png)
 ___
-### Diagrama de Componentes
-![Componentes](/img/DiagramaComponentes.drawio.png)
+### Diagrama de Actividades
+![Actividades](/img/diagrama_actividades.drawio.png)
 ___
-### Diagrama de Distribucion
-![Distribucion](/img/DiagramaDistribucion.drawio.png)
+### Diagrama de Componentes
+![Componentes](/img/DiagramadeComponentes.drawio.png)
 ___
 ### :bomb: Rubrica
 
