--- a/docs/A1.1_EduardoCollazo_Supreme_Coders.md
+++ b/docs/A1.1_EduardoCollazo_Supreme_Coders.md
@@ -57,8 +57,17 @@ ___
 ### Diagrama de Componentes
 ![Componentes](/img/DiagramaDeComponentes.drawio.png)
 ___
-### Diagrama de Distribucion 
+### Diagrama de Distribución 
 ![Distribucion](/img/DiagramaDistribucion.drawio.png)
+___
+#### Conclusiones
+*Eduardo Collazo Rivera* 
+- Para empezar la actividad fue útil para conocer como funcionaria el sistema o que funciones debería hacer para el cliente y así mismo ala hora de programar fuera mas sencillo por otro lado fue confusa o quizá no se entendió que era lo que se debería hacer a tal punto que al preguntar al equipo cada uno tenia su versión de como realizar el trabajo, pero al final cubrimos todos los diagramas que la actividad solicitaba.
+
+*Alejandro Bahama Trujillo*
+- Con la actividad desarrollamos mas diagramas de los que personalmente conocía, aplicamos los requerimientos del caso de estudio a esta actividad y empezamos a comparar diferentes puntos de vista de los integrantes para tener correctamente desarrollados los diagramas y poder colocar los que se adapten mas al caso de estudio.
+*
+- "La modelacion en UML en el desarrollo de software es una parte escencial a indispensable para la mayoria de los proyectos, principalmente para aquellos que incluyen bases de datos o que son muy extensos o complejos, ya que sin un buen modelado y pasando directamente a la programacion, esto muy seguramente generara problemas al no haber contemplado ciertos aspectos importantes en el desarrollo".
 ___
 ### :bomb: Rubrica
 
@@ -68,5 +77,6 @@ ___
 | Desarrollo    | Se respondió a cada uno de los puntos solicitados dentro del desarrollo de la actividad?     | 60      |
 | Demostración  | El alumno se presenta durante la explicación de la funcionalidad de la actividad?            | 20      |
 | Conclusiones  | Se incluye una opinión personal de la actividad  por cada uno de los integrantes del equipo? | 10      |
-
-:house: [Ir a modelo de requisitos](../docs/D1.0_Modelado_requisitos.md)
+___
+:round_pushpin: [Enlace al Github](https://github.com/EduardoCollazoR/AnalisisAvanzDeSoft.git)
+:page_facing_up: [Regresar al Repositorio Principal](/readme.md) 
