--- a/docs/A1.1_EduardoCollazo_Supreme_Coders.md
+++ b/docs/A1.1_EduardoCollazo_Supreme_Coders.md
@@ -66,7 +66,8 @@ ___
 
 *Alejandro Bahama Trujillo*
 - Con la actividad desarrollamos mas diagramas de los que personalmente conocía, aplicamos los requerimientos del caso de estudio a esta actividad y empezamos a comparar diferentes puntos de vista de los integrantes para tener correctamente desarrollados los diagramas y poder colocar los que se adapten mas al caso de estudio.
-*
+
+*Emmanuel Frias Aviña*
 - "La modelacion en UML en el desarrollo de software es una parte escencial a indispensable para la mayoria de los proyectos, principalmente para aquellos que incluyen bases de datos o que son muy extensos o complejos, ya que sin un buen modelado y pasando directamente a la programacion, esto muy seguramente generara problemas al no haber contemplado ciertos aspectos importantes en el desarrollo".
 ___
 ### :bomb: Rubrica
