--- a/blog/C2.1_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C2.1_EduardoCollazo_Supreme_Coders.md
@@ -303,7 +303,7 @@ Requerimientos funcionales del usuario y del sistema.
 |Paso 1 |Los usuarios cliente y administrador han sido notificados de los parámetros fuera de control.|
 |Excepciones | Acción |
 |Paso 1|No hay conexión con el servidor.|
-|Paso 2|Sensor desconectador.|
+|Paso 2|Sensor desconectado.|
 
 
 </div>
