--- a/docs/A1.2_EduardoCollazo_Supreme_Coders.md
+++ b/docs/A1.2_EduardoCollazo_Supreme_Coders.md
@@ -32,7 +32,7 @@ ___
 ### :pencil2: Desarrollo
 
 1. Inserte aquí el enlace al documento referido en la plantilla que el asesor halla indicado.
-- :round_pushpin: [Enlace al documento](/pdf/EspecificacionDeRequisitos.pdf)
+- :round_pushpin: [Enlace al documento](https://github.com/EduardoCollazoR/AnalisisAvanzDeSoft/blob/master/pdf/EspecificacionDeRequisitos.pdf)
 
 ___
 #### Conclusiones
