--- a/docs/A2.3_EduardoCollazo_Supreme_Coders.md
+++ b/docs/A2.3_EduardoCollazo_Supreme_Coders.md
@@ -46,19 +46,19 @@ ___
 2. Tómese como base las vistas arquitectónicas asi como los diagramas UML elaborados, para aplicar el patrón que considere el mas apropiado para cada uno de los siguientes escenarios.
    
 - 2.1 Considerando que se desea **mantener y escalar el sistema**, se busca desarrollar la aplicación a través de la descomposición de pequeños servicios independientes y aislados, los cuales consuman una interface externa para comunicarse a un servidor de base de datos.
-  - Arquitectura Microservicios
+  - [x] Arquitectura Microservicios
   - ![PRE1](/img/A2.3_2.11.drawio.png)
 - 2.2 Siendo la **confidencialidad y la seguridad** atributos o requerimientos para el caso de estudio, se busca estructurar cada uno de los componentes que se van a programar en grupos de sub-tareas, donde cada una de estas sub-tareas se deberá comunicar una capa intermedia y esta a otra capa superior.
-   - Arquitectura en Capaz
+   - [x] Arquitectura en Capaz
    - ![PRE2](/img/22.drawio.png)
 - 2.3 Buscando la **disponibilidad** del sistema se plantea instalar dos servidores de servicios, donde estos realicen sus peticiones a un tercer servidor en el cual se almacenaría la base de datos.
-  - Arquitectura Cliente-Servidor
+  - [x] Arquitectura Cliente-Servidor
   - ![PRE3](/img/A2.3_2.3.drawio.png)
 - 2.4 Identificando que la **integridad** de los datos es un requisito,  se plantea replicar y sincronizar la base de datos almacenada dentro del servidor principal a otro, considerando el principal como maestro y secundario como esclavo.
-  - Arquitectura Maestro-Esclavo
+  - [x] Arquitectura Maestro-Esclavo
   - ![PRE4](/img/Mtro_Esc.drawio.png)
 - 2.5 Considerando que el cliente solicito que cada vez que ocurra una falla se deberá proporcionar **alarmas** a los distintos usuario independiente del lugar en que se encuentren, se observa que se deberá contratar un proveedor de servicios para disparar las alarmas y estas lleguen a los usuarios requeridos.
-   - Arquitectura Basado en Eventos
+   - [x] Arquitectura Basado en Eventos
    - ![PRE5](/img/A2.2_2.5.drawio.png)
 ___
 #### Conclusiones
