--- a/blog/C3.1_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C3.1_EduardoCollazo_Supreme_Coders.md
@@ -61,6 +61,8 @@ Metodo agil Design thinking aliado al desarrollo de software
 2. Coloque en este apartado el enlace a su documento.
    - :round_pushpin: [Enlace al documento](https://github.com/EduardoCollazoR/AnalisisAvanzDeSoft/blob/master/pdf/DesignThinking.pdf)
 3. Agregue evidencias que considere que demuestren que se estuvo trabajando en equipo durante la elaboración de la actividad.
+   ![chat1](/img/chat1.jpg)
+   ![chat2](/img/chat.jpg)
 
 ### :bomb: Rubrica
 
