--- a/blog/C3.2_EduardoCollazo_Supreme_Coders.md
+++ b/blog/C3.2_EduardoCollazo_Supreme_Coders.md
@@ -37,7 +37,7 @@ Fase inicio del marco de trabajo SCRUM para el caso de estudio.
    - [x] 1.5 Priorice y estime cada historia de usuario utilizando una herramienta.
 
 2. Presente esta información durante el planning meeting, haciendo uso de herramientas visuales y gráficas, las cuales puede ser a través de cualquier plataforma en linea.
-   ![excel](/img/excel.png)
+   ![excel](/img/excel.PNG)
    - :ballot_box_with_check:[Backlog del Producto](https://docs.google.com/spreadsheets/d/1txKfTyiH-_vK4LewWr2U_yb4dfLvKaBA2ViucwSgaUE/edit?usp=sharing) 
    ![trello](/img/trello.jpg)
    - :ballot_box_with_check:[ScrumBoard](https://trello.com/b/BbiqTsHz/supreme-scrum-board)
