--- a/docs/A3.3_EduardoCollazo_Supreme_Coders.md
+++ b/docs/A3.3_EduardoCollazo_Supreme_Coders.md
@@ -40,7 +40,7 @@ Documentación del proyecto utilizando el framework Scrum para la fase planifica
 
 2. Presente esta información haciendo uso de herramientas visuales y gráficas dentro de la reunión de planificación del sprint.
    - :ballot_box_with_check:[Sprint Backlog](https://trello.com/b/zEhZk0wa/sprint-backlog)
-   - :ballot_box_with_check:[Gantt Burn Down Cahrt](https://docs.google.com/spreadsheets/d/1_P4xHhEgdN9ypqFAzHFiG5lJ1rg0NUK98SCMfFCq9EE/edit?usp=sharing)
+   - :ballot_box_with_check:[Gantt Burn Down Chart](https://docs.google.com/spreadsheets/d/1_P4xHhEgdN9ypqFAzHFiG5lJ1rg0NUK98SCMfFCq9EE/edit?usp=sharing)
 3. Coloque en este apartado evidencias que demuestren que se reunieron para desarrollar como equipo la actividad.
    ![discord](/img/discord.PNG)
    ![poker](/img/poker.PNG)
