--- a/docs/A3.1_EduardoCollazo_Supreme_Coders.md
+++ b/docs/A3.1_EduardoCollazo_Supreme_Coders.md
@@ -34,10 +34,13 @@ Diseño de arquitectura de software utilizando modelo C4
    
    - [x] 1. Diagrama de contexto.
   ![PRE1](/img/DeContexto.drawio.png)
+  ___
    - [x] 2. Diagrama de contenedores.
   ![PRE2](/img/A3.1_Contenedor.drawio.png)
+  ___
    - [x] 3. Diagrama de componentes.
   ![PRE3](/img/C4_Diagrama_de_componentes.png)
+  ___
    - [x] 4. Diagrama de clases
   ![PRE4](/img/C4.Clases.drawio.png)
 ___
@@ -56,7 +59,7 @@ ___
 - El realizar la actividad hizo que pueda aprender mas y el cómo implementar el modelo C4 para las cuatro diferentes facetas de arquitectura del software a desarrollar, el cómo se profundiza conforme se realiza un diagrama tras otro y su misma relacion entre ellos para expresar el funcionamiento interno del sistema.
   
 *Jorge Duran Trejo*
-- 
+- El modelo C4 y los diagramas desarrollados desde la perspectiva de un cliente fueron sumamente útiles para definir y esclarecer el trabajo a desarrollar, junto con las herramientas y secciones conceptualizadas inicialmente.
 
 *Tania Guadalupe Osuna Simpson*
 - 
