--- a/docs/A3.1_EduardoCollazo_Supreme_Coders.md
+++ b/docs/A3.1_EduardoCollazo_Supreme_Coders.md
@@ -66,7 +66,7 @@ ___
 - El modelo C4 y los diagramas desarrollados desde la perspectiva de un cliente fueron sumamente útiles para definir y esclarecer el trabajo a desarrollar, junto con las herramientas y secciones conceptualizadas inicialmente.
 
 *Tania Guadalupe Osuna Simpson*
-- 
+- Todas las actividades para diagramar vistas previamente sirvieron como base para desarrollar fácilmente el modelo C4. Definitivamente todo lo visto con anterioridad ayudó para que tomara forma lo que se vio en la actividad actual
 
 
 #### :bomb: Rubrica
